2006-01-20 21:04:33  Sean Middleditch <elanthis@awesomeplay.com>

  * Use inet_pton if getnameinfo isn't available. (Cygwin)
  * Don't check for socklen_t, we always screw the check up, and
    all our target platforms have it.  (Cygwin/MacOS X 10.3/Solaris)
  * Use fcntl with O_NONBLOCK instead of the MSG_DONTWAIT flag.
    (Cygwin)
  * Rename parameter s_addr to s_netaddr in mud/telnet.h and
    mud/telnet.cc, since s_addr can be a freaky macro.  (Solaris)
  * Make md5.cc use uint32_t from common/types.h.  (Solaris)
  * Move md5.cc from src/mud to src/common.
  * Fixup common/types.h to use standard int32_t and friends if
    stdint.h or inttypes.h is available.
  * NOTE: I have compiled and connected to AweMUD successfully
    on a sparc Solaris machine... only to have it crash almost
    immediately.  Not sure if the bug is in libgc or AweMUD
    itself yet.

2006-01-20 17:00:25  Sean Middleditch <elanthis@awesomeplay.com>

  * Remove custom prompts; code is bit-rotted and unused.
  * Cleanup use of EntityName a little.

2006-01-20 02:51:57  Sean Middleditch <elanthis@awesomeplay.com>

  * Removed doc/index.html.
  * Greatly improve script hook documentation.

2006-01-20 01:30:08  Sean Middleditch <elanthis@awesomeplay.com>

  * Changed the control socket protocol's quote characters from {}
    to "" to make scripting easier.
  * Added a 'login' command to the control socket protocol.
  * Add tools/awemud-control.inc.php (COMPLETELY UNTESTED!) so
    web developers can easily make use of AweMUD control interface.
  * Incorporated doc/control.txt into the AweMUD Manual.
  * Removed massroom.pl, dear is it old.
  * Removed awemud.6 manpage, totally out of date.

2006-01-19 20:47:55  Sean Middleditch <elanthis@awesomeplay.com>

  * Update the command document in the script guide to be accurate.
  * Update the FAQ.
  * Created awemud-manual.xml and ch-introduction.xml and renamed
    script-guide.xml to ch-scripting.xml.  Goal is to build all